# inov.api

./: .gitignore  =2.2.1  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: admin_entries.py  auth.py  public_entries.py
app/core/: config.py
app/db/: base.py  session.py
app/models/: entry.py  user.py
app/schemas/: entry.py  token.py  user.py
app/services/: sanity.py  security.py
app/static/admin/: index.html
app/static/admin/css/: styles.css
app/static/admin/js/: app.js
scripts/: create_superuser.py
